start basic tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="content" role="main">
   <h1>{{ title }} is running!</h1>
-  <app-posts></app-posts>
+<!--  <app-posts></app-posts>-->
 </div>
