--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,3 @@
 <button (click)="sayHello()">Say Hello</button>
 <button (click)="sayBye()">Say Bye</button>
-<span>{{message}}</span>
+<h1>{{message}}</h1>
